--- a/source/404.html
+++ b/source/404.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="your site url " homePageName="回到我的主页"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://luocong.net" homePageName="回到 MrLuo's Blog"></script>
 
 </body>
 </html>
